--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.4.2",
+    "react-datetime": "^2.15.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
