--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react_ujs": "^2.4.4",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -26,11 +22,16 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "raf": "3.4.0",
+    "react": "^16.5.2",
     "react-browser-notifications": "^1.0.14",
     "react-datetime": "^2.15.0",
     "react-dev-utils": "^5.0.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "react-web-notification": "^0.3.2",
+    "react_ujs": "^2.4.4",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
